feat: add user service & controller
