# public/docs/swagger.json
@@ -6,13 +6,13 @@
         "version": "1.0.0"
     },
     "paths": {
-        "/tournaments": {
+        "/api/tournaments": {
             "get": {
                 "tags": [
                     "Tournaments"
                 ],
                 "summary": "Get all tournaments",
-                "operationId": "d6d13007f7657d700fa0fff0acd91dac",
+                "operationId": "8626d4f0c19b7c5d27dce357833b6b97",
                 "responses": {
                     "200": {
                         "description": "A list of tournaments",
@@ -34,7 +34,7 @@
                     "Tournaments"
                 ],
                 "summary": "Create a new tournament",
-                "operationId": "9d68ca3021e6e272b1dbfdc2a103efa1",
+                "operationId": "d6053f0972883878f37e936e0316a92d",
                 "parameters": [
                     {
                         "name": "X-CSRF-TOKEN",
@@ -69,13 +69,13 @@
                 }
             }
         },
-        "/tournaments/{id}": {
+        "/api/tournaments/{id}": {
             "get": {
                 "tags": [
                     "Tournaments"
                 ],
                 "summary": "Get tournament by ID",
-                "operationId": "551f2bae3b61410cea0c01c6502e0143",
+                "operationId": "6fc0b01dfb2e637254d85be733c11867",
                 "parameters": [
                     {
                         "name": "id",
@@ -108,7 +108,7 @@
                     "Tournaments"
                 ],
                 "summary": "Update a tournament",
-                "operationId": "78e28d2b2290e269015acce30526bc09",
+                "operationId": "8005525d118e8b5faf9780fe28777f31",
                 "parameters": [
                     {
                         "name": "id",
@@ -159,7 +159,7 @@
                     "Tournaments"
                 ],
                 "summary": "Delete a tournament",
-                "operationId": "af66c4c7977e7038140626b9982b9a41",
+                "operationId": "a34335cdf270ec1cbbe62c0062364dc2",
                 "parameters": [
                     {
                         "name": "id",
@@ -177,6 +177,163 @@
                     },
                     "404": {
                         "description": "Tournament not found"
+                    }
+                }
+            }
+        },
+        "/api/users": {
+            "post": {
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Create a new user",
+                "operationId": "592819a0265360b2014512d6dbfaf0e7",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "name",
+                                    "email",
+                                    "password"
+                                ],
+                                "properties": {
+                                    "name": {
+                                        "type": "string",
+                                        "example": "John Doe"
+                                    },
+                                    "email": {
+                                        "type": "string",
+                                        "example": "john.doe@example.com"
+                                    },
+                                    "password": {
+                                        "type": "string",
+                                        "example": "securepassword"
+                                    },
+                                    "phone_number": {
+                                        "type": "string",
+                                        "example": "1234567890"
+                                    },
+                                    "roles": {
+                                        "type": "string",
+                                        "example": "admin"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "User created successfully"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    }
+                }
+            }
+        },
+        "/api/users/{id}": {
+            "get": {
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Get user by ID",
+                "operationId": "36a33ff774d5cba33c039dec2c3e0287",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "User retrieved successfully"
+                    },
+                    "404": {
+                        "description": "User not found"
+                    }
+                }
+            },
+            "put": {
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Update a user",
+                "operationId": "b9091397c8b25f12c6adb74be6ce3a5a",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "name": {
+                                        "type": "string"
+                                    },
+                                    "email": {
+                                        "type": "string"
+                                    },
+                                    "password": {
+                                        "type": "string"
+                                    },
+                                    "phone_number": {
+                                        "type": "string"
+                                    },
+                                    "roles": {
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "User updated successfully"
+                    },
+                    "404": {
+                        "description": "User not found"
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Delete a user",
+                "operationId": "fa56cffde745d3f152f95cbacd936c0b",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "User deleted successfully"
+                    },
+                    "404": {
+                        "description": "User not found"
                     }
                 }
             }
@@ -326,6 +483,10 @@
         {
             "name": "Tournaments",
             "description": "Operations about tournaments"
+        },
+        {
+            "name": "Users",
+            "description": "Users"
         }
     ]
 }
